Update notes.md